@@ -1,0 +1,30 @@
+[esxi]
+
+# Path to the local installation of vmware-cmd (part of vmware-vsphere-cli)
+path = /usr/bin/vmware-cmd 
+# IP/Hostname of ESXi-Host
+esxihost = 192.168.13.37
+# ESXi-User with specific permissions for the Sandbox-VMs (see Readme)
+user = cuckoo
+# Password of the ESXi-User
+password = secret-password
+
+# Specify a comma-separated list of available machines to be used. For each
+# specified ID you have to define a dedicated section containing the details
+# on the respective machine. (E.g. cuckoo1,cuckoo2,cuckoo3)
+machines = vsb-01
+
+[vsb-01]
+# Specify the path to vmx file of the current machine
+# You can get it by "#vmware-cmd -H #ESXI-IP# --username #cuckoo-user# --password #cuckoo-password# -l" (see Readme)
+label = /vmfs/volumes/50fdb4a1-a54ee6e0-d1cd-90b11c157cf8/vsb-01/vsb-01.vmx
+
+# Specify the operating system platform used by current machine
+# [windows/darwin/linux].
+platform = windows
+
+# Specify the IP address of the current machine. Make sure that the IP address
+# is valid and that the host machine is able to reach it. If not, the analysis
+# will fail.
+ip = 192.168.99.11
+
